# i-dot-ai.lex

./: pyproject.toml
.claude-plugin/: marketplace.json  plugin.json
.claude/skills/lex-uk-law/: SKILL.md
app/: package.json
app/src/app/api/research/chat/: route.ts
app/src/app/research/: page.tsx
infrastructure/azure/: main.bicep
scripts/: backfill_amendment_explanations.py  bulk_export_parquet.py  bulk_search_qdrant.py  regenerate_all_summaries.py
src/backend/: Dockerfile
src/backend/api/: app.py
src/backend/caselaw/: search.py
src/backend/explanatory_note/: search.py
src/backend/legislation/: search.py
src/backend/templates/: index.html
src/lex/core/: document.py  embeddings.py  qdrant_client.py  qdrant_schema.py  slack.py
src/lex/ingest/: __main__.py  orchestrator.py
tests/backend/: test_legislation.py
