[project]
name = "uk-lex"
dynamic = ["version"]
description = "OpenAPI and MCP Server for UK Legislation"
readme = "README.md"
authors = [
    { name = "Liam Wilkinson", email = "liam.wilkinson@cabinetoffice.gov.uk" },
    { name = "Oliver Normand", email = "oliver.normand@cabinetoffice.gov.uk" }
]
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.11.18",
    "azure-storage-blob>=12.24.0",
    "bs4>=0.0.2",
    "diskcache>=5.6.3",
    "fastapi>=0.115.12",
    "fastmcp==3.2.0",
    "jinja2>=3.1.0",
    "langfuse>=2.58.4",
    "lxml>=5.4.0",
    "mcp-proxy>=0.10.0",
    "openai>=1.63.2",
    "posthog>=7.9.0",
    "pandas>=2.3.2",
    "pyarrow>=21.0.0",
    "pydantic>=2.11.3",
    "pypdf>=5.1.0",
    "python-dotenv>=1.1.0",
    "qdrant-client>=1.16.0",
    "redis>=5.0.0",
    "requests>=2.32.3",
    "azure-monitor-opentelemetry>=1.1.1",
    "opentelemetry-api>=1.10.0",
    "opentelemetry-sdk>=1.10.0",
    "opentelemetry-instrumentation-fastapi>=0.41b0",
    "opentelemetry-instrumentation-httpx>=0.41b0",
    "opentelemetry-instrumentation-redis>=0.41b0",
    "opentelemetry-instrumentation-requests>=0.41b0",
    "requests-cache>=1.2.1",
    "requests-ratelimiter>=0.7.0",
    "tenacity>=9.1.2",
    "tqdm>=4.67.1",
    "uvicorn>=0.34.2",
    "xmltodict>=0.14.2",
]

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
# Distribution is "uk-lex" on PyPI; importable packages are "backend" and "lex"
packages = ["src/backend", "src/lex"]

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "src/backend/_version.py"

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "mypy>=1.18.2",
    "pytest>=8.3.5",
    "pytest-cov>=6.1.1",
    "pytest-mock>=3.14.0",
    "pytest-xdist>=3.6.1",
    "ruff>=0.14.5",
    "pip-audit>=2.10.0",
    "types-requests>=2.32.4.20250913",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
markers = [
    "integration: requires external services (Qdrant, Redis, legislation.gov.uk)",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = [
  "E",   # pycodestyle
  "F",   # pyflakes
  "W",   # pycodestyle warnings
  "I",   # isort
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
